--- a/.prettierrc
+++ b/.prettierrc
@@ -1,27 +1,4 @@
 {
-	"arrowParens": "always",
-	"bracketSpacing": true,
-	"endOfLine": "lf",
-	"htmlWhitespaceSensitivity": "css",
-	"insertPragma": false,
-	"jsxBracketSameLine": false,
-	"jsxSingleQuote": false,
-	"printWidth": 160,
-	"overrides": [
-		{
-			"files": "*Controller.ts",
-			"options": {
-				"printWidth": 240
-			}
-		}
-	],
-	"proseWrap": "preserve",
-	"quoteProps": "as-needed",
-	"requirePragma": false,
-	"semi": true,
-	"singleQuote": false,
-	"tabWidth": 4,
-	"trailingComma": "es5",
-	"useTabs": true,
-	"vueIndentScriptAndStyle": false
+  "singleQuote": true,
+  "trailingComma": "all"
 }
